<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workout_card_view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_standard_margin"
    android:padding="@dimen/half_standard_padding"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/exercise_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Exercise Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TableLayout
            android:id="@+id/table_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/exercise_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/exercise_name_text_view">

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/set_header"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/previous_header"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:text="@string/pounds_header"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:text="@string/reps_header"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workout_edit_set_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/table_header_layout"
            app:layout_constraintStart_toStartOf="@id/table_header_layout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/add_set_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/add_set"
            app:layout_constraintTop_toBottomOf="@id/workout_edit_set_list"
            app:layout_constraintStart_toStartOf="@id/workout_edit_set_list"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>